--- a/tusmo_web/templates/index.html
+++ b/tusmo_web/templates/index.html
@@ -44,6 +44,7 @@
     </a>
     <div class="game-info">
         <span id="word-number">Mot {{ data.count }}</span> - <span id="score">Score : {{ data.score }}</span>
+        <img class="noodles">
     </div>
     <div class="grid-container"></div>
     <div class="alphabet-container">
