--- a/tusmo_web/templates/versusia.html
+++ b/tusmo_web/templates/versusia.html
@@ -194,6 +194,7 @@
     <div class="grid-container"></div>
     <div class="alphabet-container">
         <div class="alphabet-grid"></div>
-    </div>      
+    </div>    
+    <div class="help-container"></div>  
 </body>
 </html>
