--- a/tusmo_web/templates/index.html
+++ b/tusmo_web/templates/index.html
@@ -43,8 +43,8 @@
         "></span>
     </a>
     <div class="game-info">
-        <span id="word-number">Mot {{ data.count }}</span> - <span id="score">Score : {{ data.score }}</span>
-        <img class="noodles">
+        <span id="word-number">Mot {{ data.count }}</span>
+        <span id="score">Score : {{ data.score }} <img class="noodles"></span>
     </div>
     <div class="grid-container"></div>
     <div class="alphabet-container">
