--- a/tusmo_web/templates/versusia.html
+++ b/tusmo_web/templates/versusia.html
@@ -25,21 +25,6 @@
         const PLAYERTURN = Math.floor(Math.random() * 2);
         let difficultyVal = parseInt(appUtils.loadKey("difficulty", 3));
 
-        async function processKeys(data) {
-            const range = 300;
-            const min = 50;
-
-            const func = (x) => (x + 1) * (x - data.length);
-
-            const norm = (i) => min + range / (func(0) - func(Math.floor(data.length / 2))) * (func(i) - func(Math.floor(data.length / 2)));
-
-            for (let i = 0; i < data.length; i++) {
-                enterKey(data.charAt(i), 1);
-                if(i !== data.length - 1) await new Promise(resolve => setTimeout(resolve, norm(i))); // Pause de norm(i) ms entre les appels
-            }
-            enterKey("ENTER", 1);
-        }
-
         appUtils.subscribe('DOMContentLoaded', () => {
             /** Manage difficulty */
             const difficultyBtn = document.querySelector("div.btn-difficulty");
@@ -188,13 +173,18 @@
     </a>
     <div class="btn-difficulty"></div>
     <div class="game-info">
-        <span id="word-number">Mot {{ data.count }}</span> - <span id="score">Score : {{ data.score }}</span>
-        <img class="noodles">
+        <span id="word-number">Mot {{ data.count }}</span>
+        <span id="score">Score : {{ data.score }} <img class="noodles"></span>
+        
     </div>
     <div class="grid-container"></div>
     <div class="alphabet-container">
         <div class="alphabet-grid"></div>
     </div>    
-    <div class="help-container"></div>  
+    <div class="help-container">
+        <div onclick="appUtils.emit('helpIA')" style="font-size: 3rem;" class="help-button" data-tooltip="Aide de l'IA" id="helpIA">🧠</div>
+        <div onclick="appUtils.emit('helpLetterBP')" style="background-color: #4caf50;" class="help-button" data-tooltip="Lettre bien placé" id="helpLetterBP">S</div>
+        <div onclick="appUtils.emit('helpLetterM')" style="background-color: lightgray; color: grey;" class="help-button" data-tooltip="Lettre mal placé" id="helpLetterM">S</div>
+    </div> 
 </body>
 </html>
