Ajout d'un message qui annonce qui commence

--- a/tusmo_web/templates/index.html
+++ b/tusmo_web/templates/index.html
@@ -44,7 +44,7 @@
     </a>
     <div class="game-info">
         <span id="word-number">Mot {{ data.count }}</span>
-        <span id="score">Score : {{ data.score }} <img class="noodles"></span>
+        <span id="score">{{ data.score }} <img class="noodles"></span>
     </div>
     <div class="grid-container"></div>
     <div class="alphabet-container">
