--- a/tusmo_web/static/style.css
+++ b/tusmo_web/static/style.css
@@ -545,3 +545,16 @@ dialog::backdrop {
       padding-top: 0;
   }
 }
+
+#message {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  padding: 2rem;
+  border-radius: 10px;
+  font-size: 2rem;
+  text-align: center;
+}
