--- a/tusmo_web/templates/regles.html
+++ b/tusmo_web/templates/regles.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SUMOT</title>
-    <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <script src="{{ url_for('static', filename='appUtils.js') }}"></script>
     <script>
         /** Charger le fond d'écran depuis le cache **/
@@ -14,11 +11,14 @@
             });
         })
     </script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SUMOT</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
+    <title>SUMOT</title>
 </head>
 <body>
-    <a class="home-button" onclick='window.location.href="/"'>
+    <a class="home-button" onclick='appUtils.goToLocation("/")'>
         <span style="
             border-style: solid;
             border-width: 0.25em 0.25em 0 0;
