--- a/tusmo_web/templates/regles.html
+++ b/tusmo_web/templates/regles.html
@@ -9,43 +9,32 @@
             appUtils.doIfOrWhen("DOMContentLoaded", () => {
                 setTimeout(() => {
                     document.body.style.backgroundImage = `url(${res})`;
-                    document.documentElement.removeAttribute('style')
+                    document.documentElement.removeAttribute('style');
                 }, 500);
             });
-        })
+        });
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SUMOT</title>
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
-    <title>SUMOT</title>
 </head>
-<body>
+<body class='rules-background'>
     <a class="home-button" onclick='appUtils.goToLocation("/")'>
-        <span style="
-            border-style: solid;
-            border-width: 0.25em 0.25em 0 0;
-            content: '';
-            display: inline-block;
-            height: 0.45em;
-            position: relative;
-            top: 0.20em;
-            transform: rotate(-135deg);
-            vertical-align: top;
-            width: 0.45em;
-            left: 0.14em;
-        "></span>
+        <span style="border-style: solid; border-width: 0.25em 0.25em 0 0; content: ''; display: inline-block; height: 0.45em; position: relative; top: 0.20em; transform: rotate(-135deg); vertical-align: top; width: 0.45em; left: 0.14em;"></span>
     </a>
 
     <!-- Titre avec surlignage alterné -->
-    <h1 class="rules-title">
-        <span class="R">R</span>
-        <span class="E">È</span>
-        <span class="G">G</span>
-        <span class="L">L</span>
-        <span class="E">E</span>
-        <span class="S">S</span>
-    </h1>
+    <header>
+        <h1 class="rules-title">
+            <span class="R">R</span>
+            <span class="E">È</span>
+            <span class="G">G</span>
+            <span class="L">L</span>
+            <span class="E">E</span>
+            <span class="S">S</span>
+        </h1>
+    </header>
 
     <div class="rules-container">
         <div class="rules-content">
@@ -57,6 +46,8 @@
                 <li><strong>JAUNE</strong> : Une lettre existe mais est mal placée.</li>
                 <li><strong>BLEU</strong> : Une lettre n'existe pas dans le mot.</li>
             </ul>
+            <p><strong>Solo :</strong> Trouvez le plus de mots possibles d'affilé pour faire le plus grand score !</p>
+            <p><strong>Versus IA :</strong> Affrontez notre IA selon le niveau de difficulté choisi. Vous partagez la même grille, chacun son tour !</p>
         </div>
     </div>
 </body>
