--- a/tusmo_web/templates/versusia.html
+++ b/tusmo_web/templates/versusia.html
@@ -1,43 +1,115 @@
 <!DOCTYPE html>
 <html lang="fr" style="background-color: #FBA999;">
 <head>
+    <!-- Link to the CSS file to style the page -->
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+
+    <!-- Including the utility JavaScript file -->
     <script src="{{ url_for('static', filename='appUtils.js') }}"></script>
     <script>
-        /** Charger le fond d'écran depuis le cache **/
+        /**
+         * Loads a background image from the cache and applies it to the document.
+         *
+         * @function loadObj - Utility function to load resources.
+         * @param {string} url - URL of the image to load.
+         * @param {boolean} [base64=false] - Whether to convert the response to Base64 format.
+         * @returns {Promise<string>} The loaded data.
+         */
         appUtils.loadObj("/static/wallpaper.jpg", true).then((res) => {
+            /**
+             * Executes a function when the DOM is loaded.
+             *
+             * @function doIfOrWhen - Utility function to wait for events.
+             * @param {string} eventName - Name of the event (here, DOMContentLoaded).
+             * @param {function} callback - Function to execute once the event is triggered.
+             */
             appUtils.doIfOrWhen("DOMContentLoaded", () => {
                 setTimeout(() => {
+                    // Applies the background image to the body style of the document
                     document.body.style.backgroundImage = `url(${res})`;
+                    
+                    // Removes the inline style from the HTML document
                     document.documentElement.removeAttribute('style')
                 }, 100);
             });
         })
     </script>
+
+    <!-- Metadata for encoding and responsiveness -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Page title -->
     <title>SUMOT</title>
+
+    <!-- Page favicon -->
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
-    <script>let real_word = "{{ data.word }}";
+
+    <script>
+        /* Defines game variables from the server-side data  */
+
+        /**
+         * Word to discover
+         * @type {string}
+         */
+        const real_word = "{{ data.word }}";
+
+        /**
+         * Previous score
+         * @type {number}
+         */
         let score = parseInt("{{ data.score }}");
+
+        /**
+         * Game number
+         * @type {number}
+         */
         let count = parseInt("{{ data.count }}");
     </script>
+
+    <!-- Including the confetti JavaScript file -->
     <script src="{{ url_for('static', filename='confetti.js') }}"></script>
+
+    <!-- Including the game script JavaScript file -->
     <script src="{{ url_for('static', filename='script.js') }}"></script>
+
     <script>
+        /**
+         *  The constant for player's turn (-1 for solo mode,  0 for player starting vs ia, 1 for ia statring vs player)
+         * @type {number}
+         */
         const PLAYERTURN = Math.floor(Math.random() * 2);
+
+        /**
+         * The initial difficulty value, loaded from local storage or set to 3 (Expert) if not found.
+         * @type {number}
+         */
         let difficultyVal = parseInt(appUtils.loadKey("difficulty", 3));
 
         appUtils.subscribe('DOMContentLoaded', () => {
-            /** Show Message */
+            /** 
+             * Show the message to indicate who starts the game (player or IA).
+             * The message is displayed briefly and then removed.
+             * @type {HTMLElement}
+             */
             const msg = document.getElementById("message");
             msg.innerHTML  = PLAYERTURN  ==  0 ? "Le joueur commence" : "L'IA commence";
             setTimeout(() => {
                 msg.remove()
             },  800);
 
-            /** Manage difficulty */
+            /** 
+             * Manages the difficulty level display and changes when clicked.
+             * The difficulty is set and updated dynamically via the button's appearance and text.
+             * @type {HTMLElement}
+             */
             const difficultyBtn = document.querySelector("div.btn-difficulty");
+
+            /**
+             * Updates the difficulty level when triggered.
+             * It changes the button's class and text according to the selected difficulty.
+             * @param {number} difficulty - The selected difficulty level (0, 1, 2, 3).
+             */
             appUtils.subscribe("changeDifficulty", (difficulty) => {
                 switch (difficulty) {
                     case 0:
@@ -63,14 +135,23 @@
                 }
             });
 
+            /**
+             * Event listener for the difficulty button click.
+             * It updates the difficulty value, stores it in local storage, and triggers an update of the button.
+             */
             difficultyBtn.addEventListener("click", () => {
                 difficultyVal = (difficultyVal + 1) % 4;
                 appUtils.updateKey("difficulty", difficultyVal);
                 appUtils.emit("changeDifficulty", difficultyVal);
             });
+
+            // Emit the current difficulty level when the page loads
             appUtils.emit("changeDifficulty", difficultyVal);
 
-            /** Play game */
+            /** 
+             * Play the game if the IA starts, sending a request to the server to get IA's move.
+             * Sends the game state (letters, history, etc.) to the server and processes the response.
+             */
             if(PLAYERTURN === 1){
                 fetch(`ia/${difficultyVal}`, {
                         method: 'POST',
@@ -109,8 +190,16 @@
         });
 
         appUtils.subscribe("keydown", (key) => {
+            /**
+             * Handles the key press events to update the game board.
+             * It processes the key input, updates the game state, and sends requests for the IA's turn if necessary.
+             * 
+             * @param {string} key - The key pressed by the user.
+             */
             let cells = Array.from(document.querySelectorAll("div.cell"));
             let cellBeforeFirstEmptyCellIdx = cells.length - 1;
+            
+            // Find the last filled cell before the first empty one
             for (let i = 0; i < cells.length; i++) {
                 if (cells[i].innerHTML == "") {
                     cellBeforeFirstEmptyCellIdx = i - 1;
@@ -118,9 +207,11 @@
                 }
             }
             
+            // Check if it's the player's turn based on the turn value
             if(Math.floor(cellBeforeFirstEmptyCellIdx / NBLETTERS) % 2 === PLAYERTURN){
                 enterKey(key, 0);
 
+                // Update the index of the last filled cell after input
                 for (let i = 0; i < cells.length; i++) {
                     if (cells[i].innerHTML == "") {
                         cellBeforeFirstEmptyCellIdx = i - 1;
@@ -128,6 +219,7 @@
                     }
                 }
 
+                // If the "ENTER" key is pressed and it's the IA's turn, trigger the IA move
                 if(key == "ENTER" && Math.floor(cellBeforeFirstEmptyCellIdx / NBLETTERS) % 2 !== PLAYERTURN){
                     fetch(`ia/${difficultyVal}`, {
                         method: 'POST',
@@ -166,6 +258,7 @@
     </script>
 </head>
 <body>
+    <!-- Return button -->
     <a class="home-button" onclick='appUtils.goToLocation("/")'>
         <span style="
             border-style: solid;
@@ -181,15 +274,25 @@
             left: 0.14em;
         "></span>
     </a>
+
+    <!-- Dificulty chooser button -->
     <div class="btn-difficulty"></div>
+
+    <!-- Header of the page -->
     <div class="game-info">
         <span id="word-number">Mot {{ data.count }}</span>
         <span id="score">{{ data.score }} <img class="noodles"></span>
     </div>
+
+    <!-- Container of the game grid -->
     <div class="grid-container"></div>
+
+    <!-- Container of the game keyboard -->
     <div class="alphabet-container">
         <div class="alphabet-grid"></div>
     </div>    
+
+    <!-- Container of the help buttons -->
     <div class="help-container">
         <div onclick="appUtils.emit('helpIA')" style="font-size: 3rem;" class="help-button" id="helpIA">🧠
             <div class="tooltip">
@@ -207,6 +310,8 @@
             </div>
         </div>
     </div>
+
+    <!-- Container who contains information about who plays first  -->
     <div id="message"></div>
 </body>
 </html>
