Start translating to english

--- a/tusmo_web/templates/solo.html
+++ b/tusmo_web/templates/solo.html
@@ -123,7 +123,7 @@
 
     <!-- Container of the help buttons-->
     <div class="help-container">
-        <div onclick="appUtils.emit('helpIA')" style="font-size: 3rem;" class="help-button" id="helpIA">🧠
+        <div onclick="appUtils.emit('helpAI')" style="font-size: 3rem;" class="help-button" id="helpAI">🧠
             <div class="tooltip">
                 Aide de l'IA <span class="tooltip-score">100 <img class="noodles"></span>
             </div>
